# lume-base

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  docs-requirements.txt  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: gh-pages.yml  lint.yml  pypi_upload.yml  tests.yml
api/base/: index.html
api/command_wrapper/: index.html
api/tools/: index.html
architecture/: index.html
docs/: architecture.md  index.md
docs/api/: base.md  command_wrapper.md  tools.md
docs/examples/: input_parsing.ipynb  lume_model.ipynb
examples/: lume_config.yml  model_config.yml  my_model_class.py
lume/: __init__.py  _version.py  base.py  model.py  staged_model.py  tools.py  variables.py
lume/parsers/: namelist.py  numbers.py
lume/serializers/: base.py  hdf5.py
lume/tests/: conftest.py  test_base.py  test_model.py
lume/tests/files/: __init__.py  test_command_wrapper_subclass.py  test_input_file.yml  test_lume_config.yml
lume/tests/serializers/: test_hdf5.py
lume/tests/variables/: test_ndvariable.py  test_particle_group.py  test_scalar.py  test_variable.py
lume/variables/: __init__.py  ndvariable.py  particle_group.py  scalar.py  variable.py
search/: search_index.json
