[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lume-base"
dynamic = ["version"]
description = "Base classes and architecture for LUME Python projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "SLAC National Accelerator Laboratory"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "openpmd-beamphysics",
    "h5py",
    "pyyaml",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/slaclab/lume-base"
Repository = "https://github.com/slaclab/lume-base"
Documentation = "https://slaclab.github.io/lume-base"

[project.optional-dependencies]
dev = [
    "pytest",
    "ipykernel",
    "pre-commit"
]
docs = [
    "pygments",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "livereload",
    "pytkdocs[numpy-style]",
]

[tool.setuptools]
packages = ["lume", "lume.parsers", "lume.serializers"]

[tool.setuptools.package-data]
lume = ["py.typed"]

[tool.setuptools_scm]
version_file = "lume/_version.py"

[tool.pytest.ini_options]
testpaths = ["lume/tests"]
addopts = "-v"

[tool.ruff]
# select = []
# ignore = []
